--- a/news/pyvenv.cfg
+++ b/news/pyvenv.cfg
@@ -1,3 +1,3 @@
 home = /home/dk/.pyenv/versions/3.6.5/bin
-include-system-site-packages = false
+include-system-site-packages = true
 version = 3.6.5
